--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "body-parser": "^1.20.1",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "helmet": "^4.2.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^5.10.16",
     "prop-types": "^15.7.2",
     "ramda": "^0.29.1",
